<resources>
    <string name="app_name">Simple Weather</string>
    <string name="five_day_forecast">5-дневный прогноз</string>
    <string name="separator">&#183;</string>
    <string name="menu_change_city">Изменить город</string>
    <string name="alert_dialog_changing">Изменение города</string>
    <string name="edit_city">Введите название города</string>
    <string name="choose">Выбрать</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_not_found">Не удалось найти указанный город</string>
    <string name="day">День</string>
    <string name="night">Ночь</string>
    <string name="number_of_requests_has_been_exceeded">Не удалось получить данные</string>
    <string name="internet_connection">Отсуствует подключение к Интернету</string>
    <string name="updating">Обновление данных…</string>
    <string name="data_updated">Данные обновлены</string>
    <string name="detais">Подробности</string>
    <string name="current_wind">%1$s  %2$s</string>
    <string name="wind">%1$s\n%2$s %3$s</string>
    <string name="visibility">%1$s  %2$s</string>
    <string name="pressure">%1$s  %2$s</string>
    <string name="last_update">Последнее обновление:\n  %1$s</string>
    <string name="real_feel">%1$s&#176;C</string>
    <string name="current_deegrees">%1$s&#176;</string>
    <string name="day_night_temp">%1$s&#176; / %2$s&#176;</string>
    <string name="precipitation">Вероятность осадков:</string>
    <string name="rain">Дождь\n\n%1$s</string>
    <string name="thunder">Гроза\n\n%1$s</string>
    <string name="snow">Снег\n\n%1$s</string>
    <string name="sunrise">Рассвет\n%1$s</string>
    <string name="sunset">Закат\n%1$s</string>
    <string name="welcome">Приложение <b>Simple Weather</b> приветствует Вас!</string>
    <string name="first_clue">Добавить город вручную - выберите &#160;&#160;</string>
    <string name="second_clue">&#8942;</string>
    <string name="third_clue">Определить текущее местоположение - &#160;</string>
    <string name="fourth_clue">проведите по экрану сверху вниз</string>
    <string name="btn_clue">Понятно</string>
    <string name="hourly_forecast">Почасовой прогноз</string>
    <string name="hourly_realfeel">Ощущается</string>
    <string name="hourly_dewpoint">Точка росы</string>
    <string name="hourly_visibility">Видимость</string>
    <string name="hourly_windfrom">Направление ветра</string>
    <string name="hourly_windspeed">Скорость ветра</string>
    <string name="hourly_UVIndex">Уф Индекс</string>
    <string name="hourly_rain">Дождь</string>
    <string name="hourly_snow">Снег</string>
    <string name="hourly_cloudcover">Облачность</string>
    <string name="today">Сегодня</string>
    <string name="tab_format">%1$s\n%2$s</string>
    <string name="precipitationProbability">Вероятность осадков</string>
    <string name="fiveday_sunrise">Рассвет</string>
    <string name="fiveday_sunset">Закат</string>
    <string name="fiveday_moonrise">Восход</string>
    <string name="gps_message">Кажется, ваш GPS отключен. Хотите его включить? </string>
    <string name="no_gps">Включите службу GPS</string>
    <string name="gps_title">Местоположение </string>
    <string name="logo_text1">Данные предоставлены сервисом</string>
    <string name="logo_text2">AccuWeather</string>
    <string name="not_available">Н/Д </string>
</resources>